Better and comprehensive documentation now (#82)
Take advantage of the documentation in the release notes: https://maven.apache.org/docs/3.3.1/release-notes.html